--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "validation": "0.0.1",
     "vue-i18n": "^8.9.0",
     "vue-timeago": "^5.1.2",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
