--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "buffer": "^5.2.1",
+    "chart.js": "^2.8.0",
     "electron-is-dev": "^1.0.1",
     "electron-progressbar": "^1.2.0",
     "electron-updater": "^4.0.6",
@@ -37,6 +38,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "validation": "0.0.1",
+    "vue-chartjs": "^3.4.2",
     "vue-i18n": "^8.9.0",
     "vue-timeago": "^5.1.2",
     "vuelidate": "^0.7.4",
