--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arqma-electron-wallet",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "daemonVersion": "4.0.0",
   "description": "Modern GUI interface for Arqma Currency",
   "productName": "Arqma Electron Wallet",
@@ -22,8 +22,10 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "acorn": "^6.2.1",
     "axios": "^0.19.0",
     "buffer": "^5.2.1",
+    "bufferutil": "*",
     "chart.js": "^2.8.0",
     "electron-is-dev": "^1.0.1",
     "electron-progressbar": "^1.2.0",
@@ -37,6 +39,7 @@
     "qrcode.vue": "^1.6.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "utf-8-validate": "^5.0.2",
     "validation": "0.0.1",
     "vue-chartjs": "^3.4.2",
     "vue-i18n": "^8.9.0",
