--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "node-sass": "^4.11.0",
     "quasar-cli": "^0.17.25",
     "sass-loader": "^7.1.0",
-    "strip-ansi": "^3.0.1"
+    "strip-ansi": "^3.0.1",
+    "webpack": "^4.39.2"
   },
   "engines": {
     "node": ">= 8.9.0",
