--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arqma-electron-wallet",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "daemonVersion": "6.0.0",
   "description": "Modern GUI interface for Arqma Currency",
   "productName": "Arqma Electron Wallet",
@@ -18,19 +18,24 @@
     "dev": "quasar dev -m electron -t mat",
     "build": "quasar build -m electron -t mat",
     "lint": "eslint --ext .js,.vue src",
+    "rebuild": "electron-rebuild -f -w better-sqlite3",
     "lint-fix": "eslint --fix .",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "acorn": "^6.2.1",
     "axios": "^0.19.0",
+    "better-sqlite3": "^5.4.0",
+    "big-integer": "^1.6.41",
     "buffer": "^5.2.1",
     "bufferutil": "*",
     "chart.js": "^2.8.0",
+    "dateformat": "^3.0.3",
     "electron-is-dev": "^1.0.1",
     "electron-progressbar": "^1.2.0",
     "electron-updater": "^4.0.6",
     "electron-window-state": "^5.0.3",
+    "exports-loader": "^0.7.0",
     "flag-icon-css": "^3.3.0",
     "fs-extra": "^7.0.1",
     "graceful-fs": "^4.2.1",
@@ -40,9 +45,11 @@
     "qrcode.vue": "^1.6.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "rotating-file-stream": "^1.4.1",
+    "ryo-core-js": "git://github.com/arqtras/ryo-core-js.git",
+    "vue-chartjs": "^3.4.2",
     "utf-8-validate": "^5.0.2",
     "validation": "0.0.1",
-    "vue-chartjs": "^3.4.2",
     "vue-i18n": "^8.9.0",
     "vue-timeago": "^5.1.2",
     "vuelidate": "^0.7.4",
@@ -56,6 +63,7 @@
     "electron-builder": "^21.2.0",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
+    "electron-rebuild": "^1.8.4",
     "electron-notarize": "^0.1.1",
     "electron-packager": "^13.1.1",
     "eslint": "^5.15.3",
