--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "electron-window-state": "^5.0.3",
     "exports-loader": "^0.7.0",
     "flag-icon-css": "^3.3.0",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.1.0",
     "graceful-fs": "^4.2.1",
     "object-assign-deep": "^0.4.0",
     "portscanner": "^2.2.0",
@@ -48,6 +48,7 @@
     "request-promise": "^4.2.4",
     "rotating-file-stream": "^1.4.1",
     "ryo-core-js": "git://github.com/arqtras/ryo-core-js.git",
+    "upath": "^1.2.0",
     "vue-chartjs": "^3.4.2",
     "utf-8-validate": "^5.0.2",
     "validation": "0.0.1",
@@ -77,7 +78,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.11.0",
-    "quasar-cli": "^0.17.25",
+    "quasar-cli": "^0.17.26",
     "sass-loader": "^7.1.0",
     "strip-ansi": "^3.0.1",
     "webpack": "^4.39.2"
