--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
               with:
                 node-version: "11.9.0"
 
+            - name: Install gyp
+              run: npm install --global --production windows-build-tools
+
             - name: Install dependencies
               run: npm install
 
