--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
                 node-version: "11.9.0"
 
             - name: Install gyp
-              run: node-gyp rebuild
+              if: runner.os != 'Windows'
+              run: npm install --global --production windows-build-tools
 
             - name: Install dependencies
               run: npm install
