--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
                 node-version: "11.9.0"
 
             - name: Install dependencies
-              run: npm install
+              run: npm install -f
 
-            - name: Download arqmadd binaries
+            - name: Download arqmad binaries
               run: node ./build/download-binaries.js
 
             - name: Extract zip binaries
