--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,10 @@ jobs:
               uses: actions/setup-node@v1
               with:
                 node-version: "11.9.0"
-
+             
+            - name: Install dependencies  
+                npm install --global --production windows-build-tools --vs2017
+            
             - name: Install dependencies
               run: npm install -f
 
