--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
                 node-version: "11.9.0"
              
             - name: Install dependencies  
-                npm install --global --production windows-build-tools --vs2017
+              run: npm install --global --production windows-build-tools --vs2017
             
             - name: Install dependencies
               run: npm install -f
