--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
             - name: Install dependencies
               run: npm install -f
 
-            - name: Download arqmadd binaries
+            - name: Download arqmad binaries
               run: node ./build/download-binaries.js
 
             - name: Extract zip binaries
@@ -34,7 +34,7 @@ jobs:
               shell: bash
               working-directory: ./downloads
 
-            - name: Extract xz binaries
+            - name: Extract gz binaries
               if: runner.os == 'Linux'
               run: tar -xf latest.gz
               shell: bash
