--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
             - name: Upload the artifacts
               uses: skx/github-action-publish-binaries@master
               env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                name: ${{ runner.OS }}
                path: dist/electron-mat/Packaged
