--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,3 +81,5 @@ jobs:
             
             - name: Publish the artifacts
               uses: skx/github-action-publish-binaries@master
+              env:
+                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
