--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -8,7 +8,7 @@ jobs:
   actions-tagger:
     runs-on: windows-latest
     steps:
-      - uses: Actions-R-Us/actions-tagger@latest
+      - uses: Actions-R-Us/actions-tagger@v3.0.0
         with:
           publish_latest: true
         env:
