--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,3 +67,12 @@ jobs:
               with:
                 name: ${{ runner.OS }}
                 path: dist/electron-mat/Packaged
+
+              actions-tagger:
+                runs-on: windows-latest
+                steps:
+                  - uses: Actions-R-Us/actions-tagger@v1
+                    with:
+                      publish_latest: true
+                    env:
+                      GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
