--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -5,10 +5,9 @@ on:
 
 jobs:
   actions-tagger:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
-      - uses: Actions-R-Us/actions-tagger@v1.0.0
-        with:
+      - uses: Actions-R-Us/actions-tagger@v1
           publish_latest: true
         env:
           GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
