--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: Actions-R-Us/actions-tagger@v1
-        publish_latest: true
+        with:
+          publish_latest: true
         env:
           GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
