--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -1,15 +1,20 @@
-name: Keep the versions up-to-date
-
+name: Add latest tag to new release
 on:
   release:
-    types: [published]
+    types: [published] # This makes it run only when a new released is published
 
 jobs:
-  actions-tagger:
-    runs-on: windows-latest
+  run:
+    name: Add/update tag to new release
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: Actions-R-Us/actions-tagger@latest
-        with:
-          publish_latest: true
-        env:
-          GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
+    - name: Checkout repository
+      uses: actions/checkout@master
+
+    - name: Run latest-tag
+      uses: EndBug/latest-tag@latest
+      with:
+        description: Description for the tag
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
