--- a/package.json
+++ b/package.json
@@ -13,82 +13,82 @@
     "name": "Arqma",
     "email": "support@arqma.com"
   },
-  "private": true,
-  "scripts": {
-    "dev": "quasar dev -m electron -t mat",
-    "build": "quasar build -m electron -t mat",
-    "lint": "eslint --ext .js,.vue src",
-    "rebuild": "electron-rebuild -f -w better-sqlite3",
-    "lint-fix": "eslint --fix .",
-    "test": "echo \"No test specified\" && exit 0"
-  },
-  "dependencies": {
-    "acorn": "^6.4.0",
-    "axios": "^0.19.2",
-    "better-sqlite3": "^5.4.0",
-    "big-integer": "^1.6.41",
-    "buffer": "^5.4.3",
-    "bufferutil": "*",
-    "chart.js": "^2.9.3",
-    "dateformat": "^3.0.3",
-    "electron-is-dev": "^1.0.1",
-    "electron-progressbar": "^1.2.0",
-    "electron-updater": "^4.2.2",
-    "electron-window-state": "^5.0.3",
-    "exports-loader": "^0.7.0",
-    "flag-icon-css": "^3.4.6",
-    "fs-extra": "^7.0.1",
-    "graceful-fs": "^4.2.3",
-    "object-assign-deep": "^0.4.0",
-    "portscanner": "^2.2.0",
-    "promise-queue": "^2.2.5",
-    "qrcode.vue": "^1.7.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "rotating-file-stream": "^1.4.1",
-    "ryo-core-js": "git://github.com/arqtras/ryo-core-js.git",
-    "utf-8-validate": "^5.0.2",
-    "validation": "0.0.1",
-    "vue-chartjs": "^3.5.0",
-    "vue-i18n": "^8.15.3",
-    "vue-timeago": "^5.1.2",
-    "vuelidate": "^0.7.5",
-    "zxcvbn": "^4.4.2"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "devtron": "^1.4.0",
-    "dotenv": "^8.1.0",
-    "electron": "^4.2.12",
-    "electron-builder": "^21.2.0",
-    "electron-debug": "^2.2.0",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-notarize": "^0.1.1",
-    "electron-packager": "^13.1.1",
-    "electron-rebuild": "^1.10.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^4.13.1",
-    "quasar-cli": "^0.17.26",
-    "sass-loader": "^7.3.1",
-    "strip-ansi": "^3.0.1",
-    "webpack": "^4.41.6"
-  },
-  "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.6.0",
-    "yarn": ">= 1.6.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 10"
-  ]
-}
+    "private": true,
+    "scripts": {
+      "dev": "quasar dev -m electron -t mat",
+      "build": "quasar build -m electron -t mat",
+      "lint": "eslint --ext .js,.vue src",
+      "rebuild": "electron-rebuild -f -w better-sqlite3",
+      "lint-fix": "eslint --fix .",
+      "test": "echo \"No test specified\" && exit 0"
+    },
+    "dependencies": {
+      "acorn": "^6.4.0",
+      "axios": "^0.19.2",
+      "better-sqlite3": "^5.4.0",
+      "big-integer": "^1.6.41",
+      "buffer": "^5.4.3",
+      "bufferutil": "*",
+      "chart.js": "^2.9.3",
+      "dateformat": "^3.0.3",
+      "electron-is-dev": "^1.0.1",
+      "electron-progressbar": "^1.2.0",
+      "electron-updater": "^4.2.2",
+      "electron-window-state": "^5.0.3",
+      "exports-loader": "^0.7.0",
+      "flag-icon-css": "^3.4.6",
+      "fs-extra": "^7.0.1",
+      "graceful-fs": "^4.2.3",
+      "object-assign-deep": "^0.4.0",
+      "portscanner": "^2.2.0",
+      "promise-queue": "^2.2.5",
+      "qrcode.vue": "^1.7.0",
+      "request": "^2.88.2",
+      "request-promise": "^4.2.5",
+      "rotating-file-stream": "^1.4.1",
+      "ryo-core-js": "git://github.com/morelo-network/ryo-core-js.git",
+      "utf-8-validate": "^5.0.2",
+      "validation": "0.0.1",
+      "vue-chartjs": "^3.5.0",
+      "vue-i18n": "^8.15.3",
+      "vue-timeago": "^5.1.2",
+      "vuelidate": "^0.7.5",
+      "zxcvbn": "^4.4.2"
+    },
+    "devDependencies": {
+      "babel-eslint": "^10.0.3",
+      "devtron": "^1.4.0",
+      "dotenv": "^8.1.0",
+      "electron": "^4.2.12",
+      "electron-builder": "^21.2.0",
+      "electron-debug": "^2.2.0",
+      "electron-devtools-installer": "^2.2.4",
+      "electron-notarize": "^0.1.1",
+      "electron-packager": "^13.1.1",
+      "electron-rebuild": "^1.10.0",
+      "eslint": "^5.16.0",
+      "eslint-config-standard": "^12.0.0",
+      "eslint-friendly-formatter": "^4.0.1",
+      "eslint-loader": "^2.2.1",
+      "eslint-plugin-import": "^2.20.1",
+      "eslint-plugin-node": "^8.0.1",
+      "eslint-plugin-promise": "^4.2.1",
+      "eslint-plugin-standard": "^4.0.1",
+      "eslint-plugin-vue": "^5.2.3",
+      "node-sass": "^4.13.1",
+      "quasar-cli": "^0.17.26",
+      "sass-loader": "^7.3.1",
+      "strip-ansi": "^3.0.1",
+      "webpack": "^4.41.6"
+    },
+    "engines": {
+      "node": ">= 8.9.0",
+      "npm": ">= 5.6.0",
+      "yarn": ">= 1.6.0"
+    },
+    "browserslist": [
+      "> 1%",
+      "last 2 versions",
+      "not ie <= 10"
+    ]
+  }
