--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,10 @@ jobs:
               shell: bash
               working-directory: ./downloads
 
-            - name: Move evolutiond binaries
+            - name: Move arqmad binaries
               run: |
                 find ./downloads -type f -name "arqmad*" -exec cp '{}' ./bin \;
-                find ./downloads -type f -name "arqmad-wallet-rpc*" -exec cp '{}' ./bin \;
+                find ./downloads -type f -name "arqma-wallet-rpc*" -exec cp '{}' ./bin \;
               shell: bash
 
             - name: Verify binaries
