--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,9 @@ jobs:
 
             - name: Download arqmad binaries
               run: node ./build/download-binaries.js
-
+              env:
+                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            
             - name: Extract zip binaries
               if: runner.os != 'Linux'
               run: unzip latest.zip
@@ -56,13 +58,13 @@ jobs:
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Remove un-needed artifacts
-              run: rm -r -- ./*/
-              shell: bash
-              working-directory: ./dist/electron-mat/Packaged
+             - name: Remove un-needed artifacts
+               run: rm -r -- ./*/
+               shell: bash
+               working-directory: ./dist/electron-mat/Packaged
 
             - name: Upload artifacts
               uses: actions/upload-artifact@v1
               with:
-                name: ${{ runner.OS }}
-                path: dist/electron-mat/Packaged
+              name: ${{ runner.OS }}
+              path: dist/electron-mat/Packaged
