parent 0c434129a540f830b50bcf473fce7bd11aadb87c author ArqTras <biuro@ar-net.info> 1592164893 +0200 committer ArqTras <biuro@ar-net.info> 1594853310 +0200
Revert "Update cs.js"

This reverts commit 0c434129a540f830b50bcf473fce7bd11aadb87c.

osx ?

osx

link

small change download

again

see that way

more

wired

removed auth

remove env

Revert "remove env"

This reverts commit 7a6f71fbb0fa8a13e0b73185c763d6b6f96814c0.

Revert "removed auth"

This reverts commit 801767dbd5bac66839cdb518fb40cc74202909aa.

old style

added mac

direct changed

fix

I will write poem here

finally build but its not the end :D

too fast

again

shorter one :D

and again

single one

full name

download

equal

notarise strings

notarize

osx

boring

wiered once working once not

removed token

Try that one

white spaces

only osx

disabled auth

idk

precision

update packages

boring

osx

idk

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [windows-2016, ubuntu-latest]
+                os: [windows-2016, macos-latest, ubuntu-latest]
 
         steps:
             - name: Checkout git repo
@@ -27,15 +27,15 @@ jobs:
             - name: Download Arqmad binaries
               run: node ./build/download-binaries.js
 
-            - name: Extract zip binaries
-              if: runner.os != 'Linux'
-              run: unzip latest.zip
-              shell: bash
-              working-directory: ./downloads
-
             - name: Extract gz binaries
               if: runner.os == 'Linux'
               run: tar -xf latest.gz
+              shell: bash
+              working-directory: ./downloads
+
+            - name: Extract zip binaries
+              if: runner.os != 'Linux'
+              run: unzip latest.zip
               shell: bash
               working-directory: ./downloads
 
@@ -54,6 +54,17 @@ jobs:
               run: npm run build
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Publish mac binaries
+              if: runner.os == 'macOS'
+              run: npm run build
+              env:
+                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                CSC_LINK: ${{ secrets.MAC_CERTIFICATE }}
+                CSC_KEY_PASSWORD: ${{ secrets.MAC_CERTIFICATE_PASSWORD }}
+                ELECTRON_WALLET_APPLE_ID: ${{ secrets.ELECTRON_WALLET_APPLE_ID }}
+                ELECTRON_WALLET_PASSWORD: ${{ secrets.ELECTRON_WALLET_PASSWORD }}
+                ELECTRON_WALLET_TEAM_ID: ${{ secrets.ELECTRON_WALLET_TEAM_ID }}
 
             - name: Remove un-needed artifacts
               run: rm -r -- ./*/
