--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -55,6 +55,12 @@ jobs:
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+            - name: Publish mac binaries
+              if: runner.os == 'macOS'
+              run: npm run release
+              env:
+                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
             - name: Remove un-needed artifacts
               run: rm -r -- ./*/
               shell: bash
