finally build but its not the end :D

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -57,7 +57,7 @@ jobs:
 
             - name: Publish mac binaries
               if: runner.os == 'macOS'
-              run: npm run release
+              run: npm run build
               env:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
