--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arqma-electron-wallet",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "daemonVersion": "6.1.0",
   "description": "Modern GUI interface for Arqma Currency",
   "productName": "Arqma Electron Wallet",
@@ -20,7 +20,9 @@
     "lint": "eslint --ext .js,.vue src",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "lint-fix": "eslint --fix .",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "preinstall": "npm install -g npx",
+    "postinstall": "npx electron-rebuild"
   },
   "dependencies": {
     "acorn": "^6.4.0",
