--- a/package.json
+++ b/package.json
@@ -21,51 +21,51 @@
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "lint-fix": "eslint --fix .",
     "test": "echo \"No test specified\" && exit 0",
-    "preinstall": "npm install -g npx",
     "postinstall": "npx electron-rebuild"
   },
   "dependencies": {
-    "acorn": "^6.4.0",
+    "acorn": "^6.4.2",
     "axios": "^0.21.1",
     "better-sqlite3": "^5.4.0",
     "big-integer": "^1.6.41",
-    "buffer": "^5.6.0",
-    "bufferutil": "*",
-    "chart.js": "^2.9.3",
+    "buffer": "^5.7.1",
+    "bufferutil": "^4.0.3",
+    "chart.js": "^2.9.4",
     "dateformat": "^3.0.3",
     "electron-is-dev": "^1.2.0",
     "electron-progressbar": "^1.2.0",
-    "electron-updater": "^4.3.1",
+    "electron-updater": "^4.3.9",
     "electron-window-state": "^5.0.3",
     "exports-loader": "^0.7.0",
     "flag-icon-css": "^3.5.0",
     "fs-extra": "^7.0.1",
-    "graceful-fs": "^4.2.4",
+    "graceful-fs": "^4.2.6",
     "object-assign-deep": "^0.4.0",
     "persian-vue-timeago": "^1.1.0",
     "portscanner": "^2.2.0",
     "promise-queue": "^2.2.5",
     "qrcode.vue": "^1.7.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
+    "request-promise": "^4.2.6",
     "rotating-file-stream": "^1.4.1",
-    "rxjs": "^6.6.0",
+    "rxjs": "^6.6.7",
     "ryo-core-js": "git://github.com/arqtras/ryo-core-js.git",
-    "utf-8-validate": "^5.0.2",
+    "urllib": "^2.37.1",
+    "utf-8-validate": "^5.0.5",
     "validation": "0.0.1",
-    "vue-chartjs": "^3.5.0",
-    "vue-i18n": "^8.18.2",
-    "vue-timeago": "^5.1.2",
-    "vuelidate": "^0.7.5",
+    "vue-chartjs": "^3.5.1",
+    "vue-i18n": "^8.24.4",
+    "vue-timeago": "^5.1.3",
+    "vuelidate": "^0.7.6",
     "zeromq": "^5.2.8",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "devtron": "^1.4.0",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.6.0",
     "electron": "^4.1.1",
-    "electron-builder": "^22.4.1",
+    "electron-builder": "^22.10.5",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-notarize": "^0.1.1",
@@ -75,16 +75,16 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.14.1",
     "quasar-cli": "^0.17.26",
     "sass-loader": "^7.3.1",
     "strip-ansi": "^3.0.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.46.0"
   },
   "engines": {
     "node": ">= 8.9.0",
