replaced preinstall althought 12.20.2 seems to not like this

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "lint-fix": "eslint --fix .",
     "test": "echo \"No test specified\" && exit 0",
+    "preinstall": "npm install -g npx",
     "postinstall": "npx electron-rebuild"
   },
   "dependencies": {
