remove obsolete request package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "lint-fix": "eslint --fix .",
     "test": "echo \"No test specified\" && exit 0",
-    "preinstall": "npm install -g npx",
     "postinstall": "npx electron-rebuild"
   },
   "dependencies": {
@@ -33,6 +32,7 @@
     "bufferutil": "^4.0.3",
     "chart.js": "^2.9.4",
     "dateformat": "^4.5.1",
+    "digest-fetch": "^1.2.0",
     "electron-is-dev": "^1.2.0",
     "electron-progressbar": "^1.2.0",
     "electron-updater": "^4.3.9",
@@ -41,13 +41,11 @@
     "flag-icon-css": "^3.5.0",
     "fs-extra": "^10.0.0",
     "graceful-fs": "^4.2.6",
+    "node-fetch": "^2.6.1",
     "object-assign-deep": "^0.4.0",
     "persian-vue-timeago": "^1.1.0",
     "portscanner": "^2.2.0",
-    "promise-queue": "^2.2.5",
     "qrcode.vue": "^1.7.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
     "rotating-file-stream": "^1.4.1",
     "rxjs": "^6.6.7",
     "ryo-core-js": "git://github.com/arqtras/ryo-core-js.git",
