--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "lint-fix": "eslint --fix .",
     "test": "echo \"No test specified\" && exit 0",
-    "preinstall": "npm i -g npx",
     "postinstall": "npx electron-rebuild"
   },
   "dependencies": {
@@ -65,7 +64,7 @@
     "devtron": "^1.4.0",
     "dotenv": "^10.0.0",
     "electron": "^4.1.1",
-    "electron-builder": "^22.10.5",
+    "electron-builder": "22.10.4",
     "electron-debug": "^2.1.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-notarize": "^0.1.1",
